--- a/customswec.user.styl
+++ b/customswec.user.styl
@@ -1,5 +1,5 @@
         /* ==UserStyle==
-@name           Custom SweC TEST 0.4.0
+@name           Custom SweC
 @namespace      github.com/openstyles/stylus
 @version        0.4.0
 @description    Customization Sweclockers 
