--- a/customswec.user.styl
+++ b/customswec.user.styl
@@ -1,7 +1,7 @@
 /* ==UserStyle==
-@name           Custom SweC 0.5.0
+@name           Custom SweC
 @namespace      github.com/openstyles/stylus
-@version        0.5.0
+@version        0.5.1
 @description    Customization Sweclockers 
 @author         Lagers
 @homepageURL	https://github.com/rlagers/CustomSweC
