--- a/customswec.user.styl
+++ b/customswec.user.styl
@@ -6,7 +6,7 @@
 @author         Lagers
 @homepageURL	https://github.com/rlagers/CustomSweC
 @supportURL		https://github.com/rlagers/CustomSweC/issues
-@updateURL		https://raw.githubusccccercontent.com/rlagers/CustomSweC/main/customswec.user.styl
+@updateURL		https://raw.githubusercontent.com/rlagers/CustomSweC/main/customswec.user.styl
 
 @license        GPL-3.0 License
 @preprocessor   stylus
